Updates from Overleaf

--- a/Manuscript/Manuscript.tex
+++ b/Manuscript/Manuscript.tex
@@ -109,6 +109,7 @@
 \newcommand{\dC}{$\delta^{13}$C\xspace}
 \newcommand{\dO}{$\delta^{18}$O\xspace}
 \newcommand{\SrSr}{$^{87}$Sr/$^{86}$Sr\xspace}
+\newcommand{\OsOs}{$^{187}$Os/$^{188}$Os\xspace}
 \newcommand{\permil}{\textperthousand\xspace}
 \newcommand{\UPb}{$^{206}$Pb/$^{238}$U\xspace}
 \newcommand{\pCOtwo}{\textit{p}CO$_{2}$\xspace}
@@ -146,9 +147,9 @@ Yves Godd\'eris\textsuperscript{3}
 
 \linenumbers
 
-Indonesia and New Guinea (I\&NG) have an outsized influence on modern chemical weathering fluxes. The confluence of steep topography, a warm and wet tropical climate, and the presence of mafic lithologies results in high fluxes of Ca and Mg cations and associated \COtwo consumption \citep{Gaillardet1999a, Hartmann2009a, Hartmann2014a}. There has been a significant increase of subaerially-exposed land area within the region since the Miocene associated with ongoing arc-continent collision between Australia and the Sunda-Banda Arc system (\citealp{Molnar2015a, Hall2017a}; Fig. \ref{fig:shoreline_growth}). The collision between the Australian-Indian and Eurasian plates and intervening arc terranes has led to the emergence of I\&NG and the exhumation of large supra-subduction ophiolites and associated forearc sediments in the warm, wet tropics \citep{Macdonald2019a}.
+Indonesia and New Guinea (I\&NG), part of what is often referred to as the Maritime Continent, have an outsized contribution to modern chemical weathering fluxes. The confluence of steep topography, a warm and wet tropical climate, and the presence of mafic lithologies results in high fluxes of Ca and Mg cations and associated \COtwo consumption \citep{Gaillardet1999a, Hartmann2009a, Milliman2013a, Hartmann2014a}. There has been a significant increase of subaerially-exposed land area within the region since the Miocene associated with ongoing arc-continent collision between Australia and the Sunda-Banda Arc system \citep{Molnar2015a, Hall2017a, Macdonald2019a}. Concurrently, after the Miocene Climatic Optimum (MCO), a cooling trend began ca. 14~Ma associated with the growth of the Antarctic ice sheet, and accelerated over the past 4~m.y. culminating with the onset of northern hemisphere glaciation \citep{Shackleton1984a, Zachos2001a}. Here we use geologic data to reconstruct the shorelines of I\&NG over the past 20~m.y. (Fig. \ref{fig:shoreline_growth}), then use these paleoshorelines as boundary conditions within a coupled weathering-climate model to quantify the magnitude of change in steady-state \pCOtwo associated with this emergence (Fig. \ref{fig:scenario_pCO2}). Not only does the inflection in the rate of increase in subaerially-exposed land area of I\&NG ca. 4~Ma coincide with that in the cooling trend, but our coupled weathering-climate model demonstrates that the magnitude of change in \pCOtwo due to these changes is sufficient to explain climate change over the Neogene. This result highlights the importance of highly weatherable regions in setting Earth's long-term climate state.
 
-Given that the region is a modern-day hot spot of fresh water and sediment discharge \citep{Milliman2013a} and chemical weathering and \COtwo consumption \citep{Hartmann2009a}, what effect has the emergence of I\&NG had on Earth's geochemical cycles and climate state? If this region was instead under water, would we have a glacial climate today? Based on paleogeographic reconstructions of arc-continent collisions through time, \citet{Macdonald2019a} proposed that arc-continent collisions in the tropics are responsible for increasing planetary weatherability, lowering \pCOtwo and causing the onset of glacial climate states. After the Miocene Climatic Optimum (MCO), a cooling trend began ca. 14~Ma associated with the growth of the Antarctic ice sheet, and accelerated over the past 4~m.y. culminating with the onset of northern hemisphere glaciation \citep{Shackleton1984a, Zachos2001a}. The \pCOtwo threshold for Antarctic glaciation is estimated to be $\sim$750~ppm with that for northern hemisphere glaciation being significantly lower at $\sim$280~ppm \citep{DeConto2008a}. The lower \pCOtwo threshold for northern hemisphere glaciation provides an explanation for southern hemisphere glaciation significantly preceding the development of ice sheets in both hemispheres. To evaluate the hypothesis that the increase of subaerially-exposed land area in I\&NG has played a significant role in lowering \pCOtwo and the development of northern hemisphere ice sheets, we use Neogene paleoshoreline reconstructions and couple a weathering model to climate model results to estimate the magnitude of changes in \pCOtwo that are coupled with changes in tropical paleogeography.
+%Based on paleogeographic reconstructions of arc-continent collisions through time, \citet{Macdonald2019a} proposed that arc-continent collisions in the tropics are responsible for increasing planetary weatherability, lowering \pCOtwo and causing the onset of glacial climate states. After the Miocene Climatic Optimum (MCO), a cooling trend began ca. 14~Ma associated with the growth of the Antarctic ice sheet, and accelerated over the past 4~m.y. culminating with the onset of northern hemisphere glaciation \citep{Shackleton1984a, Zachos2001a}. The \pCOtwo threshold for Antarctic glaciation is estimated to be $\sim$750~ppm with that for northern hemisphere glaciation being significantly lower at $\sim$280~ppm \citep{DeConto2008a}. The lower \pCOtwo threshold for northern hemisphere glaciation provides an explanation for southern hemisphere glaciation significantly preceding the development of ice sheets in both hemispheres. To evaluate the hypothesis that the increase of subaerially-exposed land area in I\&NG has played a significant role in lowering \pCOtwo and the development of northern hemisphere ice sheets, we use Neogene paleoshoreline reconstructions and couple a weathering model to climate model results to estimate the magnitude of changes in \pCOtwo that are coupled with changes in tropical paleogeography.
 
 Over geologic time-scales, \COtwo enters Earth's ocean/atmosphere system primarily via volcanism and metamorphic degassing of the solid Earth, and leaves it primarily through the chemical weathering of silicate rocks, which delivers alkalinity and cations to the ocean that ultimately result in the consumption of carbon via the precipitation of carbonate rocks \citep{Kump2000a}. However, assessing the effect of the emergence of I\&NG on Earth's \pCOtwo levels can not be determined simply through assessing the present-day chemical weathering fluxes. The steady-state \pCOtwo of Earth is set by the \pCOtwo level at which the sinks of \COtwo are equal to the sources. For example, as \COtwo sinks are removed and \COtwo rises, temperature increases and the hydrological cycle is invigorated, which causes other weathering sinks to increase until a new steady-state is achieved at a higher \pCOtwo. Conversely, the magnitude of the silicate weathering \COtwo sink can be equal to the magnitude of the source at lower steady-state \pCOtwo when global weatherability is high \citep{Kump1997a}.
 
@@ -156,30 +157,26 @@ Topography, climate, and lithology all play important roles in modulating chemic
 
 To estimate the decrease in steady-state \pCOtwo associated with the increase in global weatherability associated with the increase of subaerially-exposed land area in I\&NG, we use the spatially-resolved GEOCLIM model \citep{Godderis2014a, Godderis2017c} wherein a silicate weathering model is coupled to a global climate model run at varying \pCOtwo levels. Within the silicate weathering component of GEOCLIM, we use the DynSoil implementation of the \citet{Gabet2009a} regolith development model which integrates a climatic dependence on chemical weathering using the formulation of \cite{West2012a}.
 
-The silicate weathering component of GEOCLIM calculates \COtwo consumption resulting from silicate weathering for each continental grid cell. In previous versions of the model, the silicate weathering rate was a function of temperature and runoff only, and assumed that the bedrock in all continental grid cells had identical chemical compositions (e.g. \citealp{Godderis2014a}). However, more recent versions of GEOCLIM implement regolith development and soil shielding into the silicate weathering component based on work by \citet{Heimsath1997a}, \citet{Gabet2009a}, \citet{West2012a}, \citet{Carretier2014a}, \citet{Godderis2017b}, and \citet{Maffre2018a}, which introduces an additional dependence on topographic slope (see SI). While this introduction of regolith development into GEOCLIM is an important piece of assessing the impact of tropical arc-continent collisions on \pCOtwo, the relatively high Ca+Mg concentration in arc rocks relative to other lithologies must also be considered. We therefore implement variable bedrock Ca+Mg concentration into the silicate weathering component of GEOCLIM. The spatial distribution of lithologies is sourced from the global lithologic map (GLiM) of \citet{Hartmann2012a}, with the 16 lithologic categories represented in GLiM grouped into 6 broader categories: metamorphic, felsic, intermediate, mafic, carbonate, and siliciclastic sediment (see SI). Given that the \citet{Hartmann2012a} does not distinguish ultramafic lithologies, such rocks are within the mafic category.  Each continental grid cell is assigned one of these lithologic categories at a resolution of 0.1\degrees $\times$ 0.1\degrees. The Ca+Mg concentrations of felsic, intermediate, and mafic grid cells are assigned based on the mean of MgO and CaO measurements on rocks of each of these lithologic categories in data compiled from the EarthChem Portal (\url{www.earthchem.org/portal}). The weathering of carbonate does not contribute to long-term \COtwo consumption and therefore its Ca+Mg concentration is ignored in this analysis. The Ca+Mg concentrations of metamorphic and siliciclastic sediment grid cells are more difficult to define, since the chemical composition of these two lithologic classes is strongly dependent on protolith composition. The chemical composition of siliciclastic sediment is further strongly dependent on its degree of chemical depletion. We therefore explore a range of feasible Ca+Mg concentrations of metamorphic and siliciclastic sediment grid cells during the calibration of the silicate weathering component of GEOCLIM.
+The silicate weathering component of GEOCLIM calculates \COtwo consumption resulting from silicate weathering for each continental grid cell. In previous versions of the model, the silicate weathering rate was a function of temperature and runoff only, and assumed that the bedrock in all continental grid cells had identical chemical compositions (e.g. \citealp{Godderis2014a}). However, more recent versions of GEOCLIM implement regolith development and soil shielding into the silicate weathering component based on work by \citet{Heimsath1997a}, \citet{Gabet2009a}, \citet{West2012a}, \citet{Carretier2014a}, \citet{Godderis2017b}, and \citet{Maffre2018a}, which introduces an additional dependence on topographic slope (see SI). While this introduction of regolith development into GEOCLIM is an important piece of assessing the impact of tropical arc-continent collisions on \pCOtwo, the relatively high Ca+Mg concentration in arc rocks relative to other lithologies must also be considered. We therefore implement variable bedrock Ca+Mg concentration into the silicate weathering component of GEOCLIM. The spatial distribution of lithologies is sourced from the global lithologic map (GLiM) of \citet{Hartmann2012a}, with the 16 lithologic categories represented in GLiM grouped into 6 broader categories: metamorphic, felsic, intermediate, mafic, carbonate, and siliciclastic sediment (see SI). Each continental grid cell is assigned one of these lithologic categories at a resolution of 0.1\degrees $\times$ 0.1\degrees. The Ca+Mg concentrations of felsic, intermediate, and mafic grid cells are assigned based on the mean of MgO and CaO measurements on rocks of each of these lithologic categories in data compiled from the EarthChem Portal (\url{www.earthchem.org/portal}). We note that, given that \citet{Hartmann2012a} does not distinguish ultramafic lithologies, such rocks are grouped into the mafic category. As a result, our Ca+Mg concentration assignment of the mafic category is likely an underestimate in regions of obducted ophiolites, which means that the estimated effectiveness of these regions on changing steady-state \pCOtwo is conservative. The weathering of carbonate does not contribute to long-term \COtwo consumption and therefore its Ca+Mg concentration is ignored in this analysis. The Ca+Mg concentrations of metamorphic and siliciclastic sediment grid cells are more difficult to define, since the chemical composition of these two lithologic classes is strongly dependent on protolith composition. The chemical composition of siliciclastic sediment is further strongly dependent on its degree of chemical depletion. We therefore explore a range of feasible Ca+Mg concentrations of metamorphic and siliciclastic sediment grid cells during the calibration of the silicate weathering component of GEOCLIM.
 
-Of the various parameters used in the equations that govern the silicate weathering component of GEOCLIM (see SI), four parameters in particular are poorly constrained in the existing literature: the proportionality constant that modifies the dependence of dissolution rate on runoff and temperature ($k_{d}$), the proportionality constant that modifies the dependence of dissolution rate on runoff only ($k_{w}$), the power constant that modifies the dependence of dissolution rate on the time that a rock particle has spent in the regolith ($\sigma$), and the proportionality constant that modifies the dependence of regolith production on runoff and temperature ($k_{rp}$). As discussed above, the Ca+Mg concentrations of metamorphic and siliciclastic sediment lithologies are also not well known. Rather than prescribing values for these six parameters, we instead allow them to vary within reasonable bounds, resulting in a total of 78,000 unique parameter combinations. For each of these combinations, we compute spatially-resolved long-term \COtwo consumption (i.e. Ca+Mg fluxes) using present-day runoff, temperature, and slope fields. Following the approach of \citet{Maffre2018a}, we then sum the computed \COtwo consumption over large-scale watersheds that appear in the global compilation of \citet{Gaillardet1999a}, as well as smaller-scale watersheds of the Amazon Basin in the compilation of \citet{Moquet2018a}. We then calculate the coefficient of determination ($r^{2}$) between computed and measured \COtwo consumption in each of these basins. We eliminate all parameter combinations that result in a low $r^{2}$ (defined as \textless0.4, see SI). This calibration method leaves 3,339 unique parameter combinations that produce global and individual watershed \COtwo consumption fluxes that approximate those estimated in the literature for the present-day.
+Of the various parameters used in the equations that govern the silicate weathering component of GEOCLIM (see SI), the values of four parameters within the chemical weathering parameterization of \cite{West2012a} are poorly constrained: the proportionality constant that modifies the dependence of dissolution rate on runoff and temperature ($k_{d}$), the proportionality constant that modifies the dependence of dissolution rate on runoff only ($k_{w}$), the power constant that modifies the dependence of dissolution rate on the time that a rock particle has spent in the regolith ($\sigma$), and the proportionality constant that modifies the dependence of regolith production on runoff and temperature ($k_{rp}$). As discussed above, the Ca+Mg concentrations of metamorphic and siliciclastic sediment lithologies are also not well known. Rather than prescribing values for these six parameters, we instead allow them to vary within reasonable bounds, resulting in a total of 78,000 unique parameter combinations. For each of these combinations, we compute spatially-resolved long-term \COtwo consumption (i.e. Ca+Mg fluxes) using present-day runoff, temperature, and slope fields. Following the approach of \citet{Maffre2018a}, we then sum the computed \COtwo consumption over large-scale watersheds that appear in the global compilation of \citet{Gaillardet1999a}, as well as smaller-scale watersheds of the Amazon Basin in the compilation of \citet{Moquet2018a}. We then calculate the coefficient of determination ($r^{2}$) between computed and measured \COtwo consumption in each of these basins, and eliminate all parameter combinations that result in a low $r^{2}$. This calibration method leaves 3,339 unique parameter combinations that produce global and individual watershed \COtwo consumption fluxes that approximate those estimated in the literature for the present-day (see SI).
 
-Implementing these parameter combinations in the silicate weathering component of GEOCLIM, we estimate the decrease in steady-state \pCOtwo associated with the emergence of I\&NG. For the climate model component of GEOCLIM, we obtain modeled temperature and runoff fields at three \pCOtwo levels (286, 572, and 1144~ppm) from a subset of the GFDL CM2.0 experiments (\citealp{Delworth2006a, Delworth2006b}; see SI). The primary strength of using these three GFDL CM2.0 experiments for this analysis is that all non-\COtwo forcing agents are held constant at values representative of conditions ca. 1860, allowing the effect of \pCOtwo on climate to be isolated.
+Having calibrated the silicate weathering component of GEOCLIM, we now use it to estimate the decrease in steady-state \pCOtwo associated with the emergence of I\&NG. For the climate model component of GEOCLIM, we obtain modeled temperature and runoff fields at three \pCOtwo levels (286, 572, and 1144~ppm) from a subset of the GFDL CM2.0 experiments (\citealp{Delworth2006a, Delworth2006b}; see SI). The primary strength of using these three GFDL CM2.0 experiments for this analysis is that all non-\COtwo forcing agents are held constant at values representative of conditions ca. 1860, allowing the effect of \pCOtwo on climate to be isolated. For reconstructions of the paleoshoreline of I\&NG over the past 20~m.y., we use geologic data (Fig. \ref{fig:shoreline_growth}; see SI). Following \citet{Molnar2015a}, we analyzed the area changes of islands that are greater than $\sim$200~km$^{2}$, and we also included changes in areas of submerged continental shelves that were previously exposed, like the Sunda Shelf. Terrestrial and marine sedimentary deposits were used to determine the position of paleoshorelines.
 
-We use geological data to quantify the changes in the area of I\&NG over the past 20~m.y. (Fig. \ref{fig:shoreline_growth}). Following \citet{Molnar2015a}, we analyzed the area changes of islands that are greater than $\sim$200~km$^{2}$, and we also included changes in areas of submerged continental shelves that were previously exposed, like the Sunda Shelf. Terrestrial and marine sedimentary deposits were used to determine the position of paleoshorelines (details in SI). 
+In New Guinea, emergence in the Middle Miocene is associated with the collision between the Melanesian Arc and the distal margin of Australia \citep{vanUfford2005a, Cloos2005a, Baldwin2012a}, which drove the exhumation of the 1440~km long Irian-Marum-April Ophiolite Belt. Exhumation of the New Guinea Central Range accelerated over the past 4~m.y. which has been interpreted to be associated with slab-breakoff and buoyant uplift \citep{Cloos2005a}. In eastern New Guinea, progressive jamming of the north-dipping subduction zone has also caused major uplift over the past 4~m.y. \citep{vanUfford2005a}, which is well dated based on a change in provenance from continental to volcanic detritus \citep{Abbott1994a} and thermochronology \citep{Hill1989a}. Most of the non-volcanic islands of the Outer Banda Arc emerged after 5~Ma, associated with slab roll-back and collision with the Australian continental margin \citep{Harris2006a, Hall2013b}. In Timor and Sumba, arc-continent collision resulted in rapid uplift of deep marine sedimentary rocks to elevations \textgreater1~km above sea level with estimated average uplift rates of 1.5~km/m.y. \citep{AudleyCharles1986a}. These drivers lead to progressive emergence over the past 15~m.y. that accelerated following 5~Ma (Fig. \ref{fig:shoreline_growth}). This trend mirrors broad cooling over the Neogene and accelerated cooling over the past 4~m.y that culminated in the initiation of the Northern Hemisphere ice sheets.
 
-In New Guinea, emergence in the Middle Miocene is associated with the collision between the Melanesian Arc and the distal margin of Australia \citep{vanUfford2005a, Cloos2005a, Baldwin2012a}, which drove the exhumation of the 1440~km long Irian-Marum-April Ophiolite Belt. Exhumation of the New Guinea Central Range accelerated over the past 4~m.y. which has been intrepreted to be associated with slab-breakoff and buoyant uplift \citep{Cloos2005a}. In eastern New Guinea, progressive jamming of the north-dipping subduction zone has also caused major uplift over the past 4~m.y. \citep{vanUfford2005a}, which is well dated with a change in provenance from continental to volcanic detritus \citep{Abbott1994a} and thermochronology \citep{Hill1989a}. Most of the non-volcanic islands of the Outer Banda Arc emerged after 5~Ma, associated with slab roll-back and collision with the Australian continental margin \citep{Harris2006a, Hall2013b}. In Timor and Sumba arc-continent collision resulted in rapid uplift of deep marine sedimentary rocks to elevations \textgreater1~km above sea level with estimated average uplift rates of 1.5~km/m.y. \citep{AudleyCharles1986a}. These drivers lead to progressive emergence, as seen in the paleoshoreline reconstructions, over the past 15 million years that accelerated following 5 Ma (Fig. \ref{fig:shoreline_growth}.
+To explore the sensitivity of global weatherability and climate state to the emergence of I\&NG, we test three scenarios using GEOCLIM (Fig. \ref{fig:scenario_pCO2}). The ``reduced I\&NG + Sunda Shelf'' scenario represents our best estimate of the subaerial extent of islands in the area at ca. 15~Ma. Given that the Sunda Shelf is presently submerged, across the shelf we distribute felsic and siliciclastic lithologies and assign shallow slope values in a manner that is consistent with existing observations (see SI). While we modify the shorelines, the position of the tectonic blocks remain fixed since we use a climate model forced with modern paleogeography. While there has been motion of these tectonic blocks since 15~Ma, it has been minimal, and therefore this fixed scenario is a good approximation of the paleogeography (see SI). The ``reduced I\&NG'' scenario is identical to the ``reduced I\&NG + Sunda Shelf'' scenario, but excludes the Sunda Shelf. The ``removed I\&NG'' scenario represents an end-member scenario, in which all islands associated with arc-continent collision in the area are entirely removed.
 
-Along with the Neogene increase in subaerially-exposed land area and tectonic topography associated with arc-continent collision, there has also been a decrease in subaerially-exposed land area on the Sunda Shelf \citep{Sarr2019a}. Large portions of this low-relief area of continental crust were likely emergent throughout the Neogene, and were repeatedly subaerially exposed during the Pleistocene as recently as the Last Glacial Maximum \citep{Hall2002a}, potentially driving climate amplification on orbital timescales \citep{DiNezio2018a}. Similarities in terrestrial biotas of Borneo and mainland Southeast Asia suggest the existence of land bridges on the Sunda Shelf throughout the Miocene \citep{Moss1998a}. During the Eocene through early Miocene, the rifting of the South China Sea resulted in subsidence of the Sunda Shelf \citep{Morley2013a} and recent subsidence is interpreted to be a result of dynamic topography, triggered by subduction-related mantle flow \citep{Sarr2019a}. In the Miocene, this region exposed a mixture of felsic basement rocks and siliciclastic sediments \citet{Darmadi2007a}. The relatively low-relief and felsic lithologies of the region contrasts with the high-relief and mafic lithologies of most of I\&NG.
+Using the 3,339 unique parameter combinations, the ``removed I\&NG'' scenario resulted in steady-state \pCOtwo's of 598--729~ppm (5--95 percentile values), the ``reduced I\&NG'' scenario of 547--638~ppm, and the ``reduced I\&NG + Sunda Shelf'' of 533--611~ppm (Fig. \ref{fig:scenario_pCO2}). These results suggest that without the Neogene increase in subaerially-exposed land area and tectonic topography associated with arc-continent collision, pre-industrial \pCOtwo would have been $\sim$500--700~ppm. Notably, the effect of the Sunda Shelf on steady-state \pCOtwo is relatively small, given the low Ca+Mg concentration of the lithologies that comprise the Sunda Shelf as well as its low slope. These GEOCLIM \pCOtwo values resemble the higher end of proxy-based \pCOtwo estimates for the early Miocene \citep{Foster2017a}, indicating that the increase in subaerially-exposed land area and tectonic topography of I\&NG is itself sufficient to explain the long-term cooling of Earth's climate over the Neogene.
 
-To explore the sensitivity of global weatherability and climate state to the emergence of I\&NG, we test three scenarios using GEOCLIM (Fig. \ref{fig:scenario_pCO2}). The ``removed I\&NG'' scenario represents an end-member scenario, in which all islands associated with arc-continent collision in the area are entirely removed. The ``reduced I\&NG'' scenario represents our best estimate of the subaerial extent of islands in the area at ca. 15~Ma, excluding the Sunda Shelf. The ``reduced I\&NG + Sunda Shelf'' is identical to the ``reduced I\&NG'' scenario with the addition of the Sunda Shelf. Given that no land in the Sunda Shelf is currently exposed, across the shelf we distribute felsic and siliciclastic lithologies, assign shallow slope values, and interpolate runoff across latitude bands (see SI).
+Separately, enhanced weatherability associated with the movement of the Deccan Traps into the tropical rain belt together with the low-latitude emplacement of the Ethiopian Traps is a hypothesis that has been put forth to explain the draw-down of \COtwo leading into Oligocene glaciation of Antarctica \citep{Kent2008a, Kent2013a}. To explore the sensitivity of global weatherability and climate state to the presence of the modern-day surface exposure of basaltic lavas, we test three additional scenarios using GEOCLIM that are now possible with the spatial resolution of lithology (Fig. \ref{fig:scenario_pCO2}). In the ``removed Deccan Traps'' and the ``removed Ethiopian Traps'' scenarios, all volcanics associated with the respective igneous provinces are replaced with the Ca+Mg concentration of bulk continental crust. In the ``removed both traps'' scenario, all volcanics associated with both provinces are replaced with the Ca+Mg concentration of bulk continental crust. These scenarios result in steady-state \pCOtwo's \textless500~ppm, distinctly lower than those for the three I\&NG scenarios. This result indicates that, while the presence of high Ca+Mg concentration mafic rocks in these igneous provinces provides a non-negligible contribution to modulating steady-state \pCOtwo, its contribution is smaller than that of the wetter and higher-relief I\&NG.
 
-Using the 3,339 unique parameter combinations, the ``removed I\&NG'' scenario resulted in steady-state \pCOtwo's of 598-729~ppm (5-95 percentile values), the ``reduced I\&NG'' scenario of 547-638~ppm, and the ``reduced I\&NG + Sunda Shelf'' of 533-611~ppm (Fig. \ref{fig:scenario_pCO2}). These results suggest that without the Neogene increase in subaerially-exposed land area and tectonic topography associated with arc-continent collision, pre-industrial \pCOtwo would have been $\sim$500-700~ppm. Notably, the effect of the Sunda Shelf on steady-state \pCOtwo is relatively small, given the low Mg+Ca concentration of the lithologies that comprise the Sunda Shelf as well as its low slope. These GEOCLIM \pCOtwo values resemble the higher end of proxy-based \pCOtwo estimates for the early Miocene \citep{Foster2017a}, indicating that the increase in subaerially-exposed land area and tectonic topography of I\&NG is itself sufficient to explain climate change over the Neogene.
-
-Our  show a broad increase in exposed land area over the Neogene and an acceleration over the past 4~m.y. This trend is due to progressive arc-continent collision from west to east that has culminated with increased exhumation in the Banda Arc and New Guinea in the past 4~m.y. This trend mirrors broad cooling over the Neogene and accelerated cooling over the past 4~m.y that culminated in the initiation of the Northern Hemisphere ice sheets. Not only does the timing of the increase in subaerially-exposed land area of I\&NG coincide with the cooling trend, but our coupled weathering-climate model demonstrates that the magnitude of change in \pCOtwo due to these changes is sufficient to explain climate change over the Neogene.
-
-Enhance weatherability associated with the movement of the Deccan Traps into the tropical rain belt together with the low-latitude emplacement of the Ethiopian Traps is an hypothesis that has been put forth to explain the draw-down of \COtwo leading into Oligocene glaciation of Antarctica \citep{Kent2008a, Kent2013a}. To explore the sensitivity of global weatherability and climate state to the presence of the surface exposure of basaltic lavas, we test three additional scenarios using GEOCLIM that are now possible with given the spatial resolution of lithology (Fig. \ref{fig:scenario_pCO2}). In the ``removed Deccan Traps'' and the ``removed Ethiopian Traps'' scenarios, all volcanics associated with the respective igneous provinces are replaced with the Ca+Mg concentration of bulk continental crust. In the ``removed both traps'' scenario, all volcanics associated with both provinces are replaced with the Ca+Mg concentration of bulk continental crust. These scenarios result in steady-state \pCOtwo's \textless500~ppm, distinctly lower than those for the three I\&NG scenarios. This result indicates that, while the presence of high Ca+Mg concentration mafic rocks in these igneous provinces provides a non-negligible contribution to modulating steady-state \pCOtwo, its contribution is significantly smaller than that of high-relief I\&NG.
-
-First, the tested scenarios only simulate changes in the location of the shorelines in I\&NG and the lithology exposed in the Deccan and Ethiopian Traps. Changes in paleogeography that are not accounted for in our simulations may have resulted in changes in oceanic and atmospheric circulation \citep{Haug1998a, Shevenell2004a, Holbourn2015a, Molnar2015a} that contributed to changes in \pCOtwo on hundreds of thousands to million-year timescales. However, the global extent and multi-million year timescale of the long-term cooling trend since 14~Ma suggests that the primary driver for this cooling is changes in the geological sources and sinks of carbon, modulated by the silicate weathering feedback \citep{Walker1981a, Raymo1991a, Berner1997a, Kump1997a, Berner2001a}. In this way, changes in the flux of \COtwo outgassing via changes in spreading rates and ridge lengths \citep{Rowan2016a} and changes in weatherability via mountain building and the movement of land masses into/out of areas of high temperature and runoff are likely more important paleogeography-related factors in terms of modulating Neogene cooling than changes in oceanic and atmospheric circulation. Second, 
-
+Other hypotheses that have been proposed to explain cooling over the Neogene include changes in ocean circulation and upwelling \citep{Shevenell2004a, Holbourn2015a}, perhaps associated with increased organic carbon burial \citep{Vincent1985a, Flower1993a} or the closure of the Central American Seaway \citep{Haug1998a}, an increase in the strength of the Walker Circulation \citep{Molnar2015a}, and feedbacks with terrestrial vegetation \citep{Cerling1997a}. Although changes in circulation and vegetation may have contributed to changes in \pCOtwo on hundreds of thousands to million-year timescales, the multi-million year timescale of the long-term cooling trend since 14~Ma is the product of changes in the geological sources and sinks of carbon, modulated by the silicate weathering feedback \citep{Walker1981a, Raymo1991a, Berner1997a, Kump1997a, Berner2001a}. Uplift in the Himalayas \citep{Raymo1988a} or a decrease in volcanic outgassing \citep{Berner1983a, Rowan2016a} have also been proposed as drivers for Neogene cooling. Proponents of the Himalayan hypothesis point toward rising marine \SrSr as being consistent with increasing weathering of the high \SrSr Himalayan lithologies. However, this rise in \SrSr since ca. 35~Ma is punctuated with a distinct decrease in slope ca. 15~Ma. This inflection has been attributed to exhumation and weathering of the relatively low \SrSr Lesser Himalaya tectonic unit and related strata \citep{Myrow2015a, Colleps2018a}, but could also be explained by exhumation and weathering of low \SrSr mafic and ultramafic lithologies in I\&NG, which began to emerge at this time. Furthermore, while global spreading rates, ridge length, and paleogeography elsewhere on Earth undoubtedly changed through the Neogene contributing to changes in geological carbon sources and sinks, the fact that the inflection in the rate of increase in subaerially-exposed land area of I\&NG ca. 4~Ma coincides with that in the cooling trend and that our coupled weathering-climate model estimates \pCOtwo change associated with emergence of I\&NG is sufficient to explain climate change over the Neogene, this study suggests that the global climate state is particularly sensitive to the tropical paleogeography of I\&NG.
 
 %%% RELATIVELY COMPLETE TEXT ABOVE - BELOW ARE SNIPPETS THAT COULD BE INCORPORATED IN
+
+
+%Our  show a broad increase in exposed land area over the Neogene and an acceleration over the past 4~m.y. This trend is due to progressive arc-continent collision from west to east that has culminated with increased exhumation in the Banda Arc and New Guinea in the past 4~m.y. This trend mirrors broad cooling over the Neogene and accelerated cooling over the past 4~m.y that culminated in the initiation of the Northern Hemisphere ice sheets. Not only does the timing of the increase in subaerially-exposed land area of I\&NG coincide with the cooling trend, but our coupled weathering-climate model demonstrates that the magnitude of change in \pCOtwo due to these changes is sufficient to explain climate change over the Neogene.
 
 %%%I\&NG are potent sinks of carbon because they contain large swaths of ophiolites that are exposed along E-W belts of tectonic topography in the warm wet tropics.
 
