--- a/Manuscript/Supplementary_Information/Supplementary_Information.tex
+++ b/Manuscript/Supplementary_Information/Supplementary_Information.tex
@@ -316,7 +316,7 @@ The lithologic map used in the ``reduced I\&NG + Sunda Shelf'' scenario (Fig. \r
 
 Geological maps, stratigraphic data, and previous paleoshoreline compilations were used to calculate the changes in different types of subaerially exposed rocks in I\&NG. Following \citet{Molnar2015a}, we analyzed the area changes of islands that are larger than $\sim$200~km$^{2}$. We also included changes in areas of submerged continental shelves that were previously exposed, like the Sunda Shelf. Larger islands were further divided into regions based upon their position on microplates as defined by \citep{Matthews2016a}. Miocene to present stratigraphic columns were compiled from each region to develop an age model for paleoenvironmental indicators. In general, carbonate strata and thin-bedded siliciclastic strata were assumed to be deposited in a subaqueous marine environment, whereas evidence for exposure and terrestrial siliciclastic deposits were used as indicators of a subaerial paleoenvironment. Following previous paleoshoreline compilations and these environmental indicators, paleoshorelines were outlined in QGIS to calculate areas for the Early Pliocene (5 Ma), Late Miocene (10 Ma), and Middle Miocene (15 Ma). The paleoshoreline reconstructions within the paleogeographic models broadly coincide with sub-Epoch boundaries (i.e. Early Miocene = 23--16~Ma, Middle Miocene = 15.99--11.61~Ma, Late Miocene = 11.6--5.4~Ma, Pliocene =5.39--3.8 Ma) but we recognize that the biostratigraphic resolution is an additional source of uncertainty.
 
-Several new sources for paleoshoreline data have become available since \citet{Molnar2015a}. Particularly, for Sulawesi, we followed the recent stratigraphic compilation and paleoshorelines delineated by \citet{Nugraha2018a}, and in New Guinea, we followed \citet{Gold2017a} and \cite{Harrington2017a}. Although the outlines of our paleoshorelines are significantly different from those used for 5~Ma by \citet{Molnar2015a} our calculated area is comparable (Fig. \ref{fig:shoreline_growth}). 
+Several new sources for paleoshoreline data have become available since \citet{Molnar2015a}. Particularly, for Sulawesi, we followed the recent stratigraphic compilation and paleoshorelines delineated by \citet{Nugraha2018a}, and in New Guinea, we followed \citet{Gold2017a} and \cite{Harrington2017a}. Although the outlines of our paleoshorelines are significantly different from those used for 5~Ma by \citet{Molnar2015a} our calculated area is comparable (Fig. 1 in main text). 
 
 \subsection*{Malay Peninsula and Sunda Shelf}
 
@@ -356,13 +356,13 @@ In the Bird’s Neck of western New Guinea, the Lengguru foldbelt formed during 
 
 \subsection*{Philippines}
 
-Our reconstructions of the paleoshorelines of the Phillipines were primarily informed by paleogeographic reconstructions from Hall \citep{Hall1997a}, coupled with geologic maps of the archipelago (Geological Survey Division, 1963). The Philippine ophiolites have been grouped in four distinct belts (Yumul, 2007). We combine belts 1 and 2 in an eastern suture zone and belts 3 and 4 in a western suture zone (Fig. 3; sutures 11 and 12). Belts 1 and 2 were juxtaposed in the eastern suture zone during sinistral transpression, which resulted in Early Miocene uplift and deposition of coarse clastic sediments (Pubellier et al., 1991). The Palawan microcontinental block and Philippine mobile belt collided during late Early Miocene to early Middle Miocene resulting into the emplacement of the western ophiolites, with exhumation extending from the Late Miocene to the present (Yumul Jr et al., 2013). In addition to collision, arc magmatism contributed significantly to crustal growth in the Philippines (Dimalanta and Yumul, 2003).
+Our reconstructions of the paleoshorelines of the Phillipines were primarily informed by paleogeographic reconstructions from Hall \citep{Hall1997a}, coupled with geologic maps of the archipelago \citep{GeologicalSurveyDivision1963a}. The Philippine ophiolites have been grouped in four distinct belts \citep{Yumul2007a}. We combine belts 1 and 2 in an eastern suture zone and belts 3 and 4 in a western suture zone. Belts 1 and 2 were juxtaposed in the eastern suture zone during sinistral transpression, which resulted in Early Miocene uplift and deposition of coarse clastic sediments \citep{Pubellier1991a}. The Palawan microcontinental block and Philippine mobile belt collided during late Early Miocene to early Middle Miocene resulting into the emplacement of the western ophiolites, with exhumation extending from the Late Miocene to the present \citep{Yumul2013a}. In addition to collision, arc magmatism contributed significantly to crustal growth in the Philippines \citep{Dimalanta2006a}.
 
 \subsection*{Sunda-Banda Arc}
 
-Paleoshoreline reconstructions of the Sunda-Banda Arc system relied largely on the work of Hall (2013b). The Sunda-Banda Arc system is composed of thick sequences of mixed sedimentary rocks and basement intruded and overlain by igneous rocks derived from continual arc magmatism through much of the Cenozoic (Hall, 2017). Sumatra is the largest island within the Sunda-Banda Arc system that stretches from the Andaman Sea in the northwest to the Banda Sea in the east. The western portion of the Sumatra is underlain by the Wolya ophiolite, which was obducted in the Cretaceous and exhumed in the Eocene to Oligocene (Allen et al., 2008), whereas the southeast corner on the islands of Bangka and Belitung is composed of granite basement of the Sunda Shelf (Hall, 2009, 2013b). Java is composed of a complex of E-W-striking deformational and magmatic belts (Audley-Charles, 2004). The belts have a volcanic arc in the south and a continental shelf to the north with an adjacent sedimentary basin (Audley-Charles, 2004). Bali and Flores are mostly volcanic with some sedimentary cover (Hall, 2009).
+Paleoshoreline reconstructions of the Sunda-Banda Arc system relied largely on the work of \citet{Hall2013a}. The Sunda-Banda Arc system is composed of thick sequences of mixed sedimentary rocks and basement intruded and overlain by igneous rocks derived from continual arc magmatism through much of the Cenozoic \citep{Hall2017a}. Sumatra is the largest island within the Sunda-Banda Arc system that stretches from the Andaman Sea in the northwest to the Banda Sea in the east. The western portion of the Sumatra is underlain by the Wolya ophiolite, which was obducted in the Cretaceous and exhumed in the Eocene to Oligocene \citep{Allen2008a}, whereas the southeast corner on the islands of Bangka and Belitung is composed of granite basement of the Sunda Shelf \citep{Hall2009a, Hall2013b}. Java is composed of a complex of E-W-striking deformational and magmatic belts \citep{AudleyCharles2004a}. The belts have a volcanic arc in the south and a continental shelf to the north with an adjacent sedimentary basin \citep{AudleyCharles2004a}. Bali and Flores are mostly volcanic with some sedimentary cover \citep{Hall2009a}.
 
-Exhumation of the modern Sunda-Banda Arc is the result of ongoing arc-continent collision with the subducting Australian Plate (Harris, 2006). From ~20-10 Ma, the majority of Sumatra and nearly all of Java were submerged, although Bangka and Belitung were exposed in addition to a portion of the greater Sunda Shelf, which was at least partially exposed throughout the past 20 Ma (Hall, 2009, 2013b). Six major islands were subaerially exposed before 5 Ma: Sumatra, Belitung, Bangka, Java, Bali, and Flores. However, most of Sumatra and Java were elevated above sea level and emerged to their present exposures only since 5 Ma (Hall, 2009, 2013b). Most of the non-volcanic islands of the Outer Banda Arc emerged after 5 Ma, associated with slab roll-back and collision with the Australian continental margin (Audley-Charles, 2004; Hall, 2013b; Harris, 2006). In Timor and Sumba arc-continent collision resulted in rapid uplift of deep marine sedimentary rocks to elevations >1 km above sea level with estimated average uplift rates of 1.5 km/Myr (Audley-Charles, 1986).
+Exhumation of the modern Sunda-Banda Arc is the result of ongoing arc-continent collision with the subducting Australian Plate \citep{Harris2006a}. From ca. 20--10~Ma, the majority of Sumatra and nearly all of Java were submerged, although Bangka and Belitung were exposed in addition to a portion of the greater Sunda Shelf, which was at least partially exposed throughout the past 20~Ma \citep{Hall2009a, Hall2013b}. Six major islands were subaerially exposed before 5~Ma: Sumatra, Belitung, Bangka, Java, Bali, and Flores. However, most of Sumatra and Java were elevated above sea level and emerged to their present exposures only since 5~Ma \citep{Hall2009a, Hall2013b}. Most of the non-volcanic islands of the Outer Banda Arc emerged after 5~Ma, associated with slab roll-back and collision with the Australian continental margin \citep{AudleyCharles2004a, Harris2006a, Hall2013b}. In Timor and Sumba arc-continent collision resulted in rapid uplift of deep marine sedimentary rocks to elevations $\textgreater$1~km above sea level with estimated average uplift rates of 1.5~km/m.y. \citep{AudleyCharles1986a}.
 
 \section*{Limitations and Future Directions}
 
